updated project 1.html

--- a/project 1.html
+++ b/project 1.html
@@ -1,35 +1,42 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>HTML Basics</title>
-        <main>
-        <h1>Luna</h1>
+<h1>Luna</h1>
         <style>
         h1 {color:lightcoral;}
         p {color:rgb(24, 156, 156);}
+        body {color:rgb(24, 156, 156);}
         h1 {font-style:italic;}
+        button {color:darkorange}   
+        p {font-style:italic} 
         </style>
     </head>
         <body>
-            <p>Luna is an 8-months-old female mutt who loves to chew squeakers. 
+@ -15,7 +17,8 @@
 
             </p>
             <br>
             <img src="https://cdn.shopify.com/s/files/1/0249/0020/files/weimaraner-1381186_large.jpg?v=1493159076" alt="cute ass dog.">
+            <a href="https://www.pexels.com/search/dog/"><img src="https://cdn.shopify.com/s/files/1/0249/0020/files/weimaraner-1381186_large.jpg?v=1493159076" alt="cute ass dog.">
+            </a>
             <br>
             <br>           
             <p>Take this <a href="https://barkpost.com/dog-personality-type-quiz/" target="_blank">quiz </a>to find out if your dog is like mine!             
-            </p>
-            <a href="https://www.goodhousekeeping.com/life/pets/g3413/cute-dog-pictures/" target="_blank"><button>More adorable pictures!</button>
+@ -24,8 +27,18 @@
             </a>
             <br>
             <br>
 
         
+            <p>Dogs are awesome because:
+                <ul>
+                    <li>  They are loyal</li>
+                    <li> They love cuddles</li>
+                    <li> They are protective</li>
+                </ul>             
+                <br>
+                <form action="http://google.com">                
+                    <input type="text" placeholder="Search">            
+                        <button type="submit"> Submit </button> 
+                </form>                    
+            </p>     
 
         </body> 
         <footer>Created by Sarah Benson</footer>
-    </main>
-
-</html>
-    
