--- a/project 1.html
+++ b/project 1.html
@@ -1,40 +1,25 @@
-<h1>Luna</h1>
-        <style>
-        h1 {color:lightcoral;}
-        p {color:rgb(24, 156, 156);}
-        body {color:rgb(24, 156, 156);}
-        h1 {font-style:italic;}
-        button {color:darkorange}   
-        p {font-style:italic} 
-        </style>
+<!DOCTYPE HTML>
+<html>
+<main>
+    <head>
+        <link rel="stylesheet" href="stylesheet.css">
     </head>
-        <body>
-
-            </p>
-            <br>
-            <img src="https://cdn.shopify.com/s/files/1/0249/0020/files/weimaraner-1381186_large.jpg?v=1493159076" alt="cute ass dog.">
-            <a href="https://www.pexels.com/search/dog/"><img src="https://cdn.shopify.com/s/files/1/0249/0020/files/weimaraner-1381186_large.jpg?v=1493159076" alt="cute ass dog.">
-            </a>
-            <br>
-            <br>           
-            <p>Take this <a href="https://barkpost.com/dog-personality-type-quiz/" target="_blank">quiz </a>to find out if your dog is like mine!             
-            </p>
-            <br>
-            <br>
-
-        
-            <p>Dogs are awesome because:
-                <ul>
-                    <li>  They are loyal</li>
-                    <li> They love cuddles</li>
-                    <li> They are protective</li>
-                </ul>             
-                <br>
-                <form action="http://google.com">                
-                    <input type="text" placeholder="Search">            
-                        <button type="submit"> Submit </button> 
-                </form>                    
-            </p>     
-
-        </body> 
-        <footer>Created by Sarah Benson</footer>
+    <body>
+        <h1>My Dog Kylo</h1>
+        <div>
+            <img src="IMG_5026.jpg">
+        </div>          
+        <p> My dog is awesome because:
+            <ul>
+                <li>He is loyal</li>
+                <li>He loves fetch</li>
+                <li>He is friendly</li>
+            </ul>
+        </p>             
+        <p>        
+        <button type="submit">Search for Great Dogs</button>                    
+        </p>     
+    </body> 
+    <footer>Created by Sarah Cooper</footer>
+    </main>
+    </html>
